:sparkles: feat: update dependencies
- Update Silverstripe to 5.3
- Update to yarn stable

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,13 @@
 # Dependencies
 node_modules
 vendor
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 # Silverstripe
 _resources
