--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,5 @@
 parameters:
-  level: 9
+  level: max
   paths:
     - app/_config.php
     - app/src
@@ -7,22 +7,7 @@ parameters:
   excludePaths:
     - ecs.php
     - rector.php
-  stubFiles:
-    - stubs/Psr/Container/ContainerExceptionInterface.stub
-    - stubs/Psr/Container/ContainerInterface.stub
-    - stubs/Psr/Container/NotFoundExceptionInterface.stub
-    - stubs/SilverStripe/Core/Injector/Injector.stub
-  universalObjectCratesClasses:
-    - SilverStripe\Core\Config\Config_ForClass
-    - SilverStripe\Forms\GridField\GridState_Data
-    - SilverStripe\View\ViewableData
-    - Symbiote\QueuedJobs\Services\AbstractQueuedJob
   ignoreErrors:
-    -
-      # Ignore configuration properties
-      message: '#Static property [a-zA-Z0-9\\$\\_\\\\:\\(\\)]+ is never read, only written#'
-      identifier: property.onlyWritten
-      reportUnmatched: false
     -
       # Ignore iterable typed array properties https://github.com/phpstan/phpstan/discussions/7287
       message: "#Property [a-zA-Z0-9\\$\\_\\\\:\\(\\)]+ type has no value type specified in iterable type array#"
@@ -36,3 +21,7 @@ parameters:
         - '#Dynamic call to static method SilverStripe\\Dev\\SapphireTest#'
       identifier: staticMethod.dynamicCall
       reportUnmatched: false
+    -
+      # PHPStan does not support T of Page
+      message: "#^PHPDoc tag @template T for class PageController with bound type Page is not supported\\.$#"
+      identifier: generics.notSupportedBound
