--- a/app/_config/database.yml
+++ b/app/_config/database.yml
@@ -1,7 +1,7 @@
 # UTF8MB4 has limited support in older MySQL versions.
 # Remove this configuration if you experience issues.
 ---
-Name: app_database
+Name: app-database
 ---
 SilverStripe\ORM\Connect\MySQLDatabase:
   connection_charset: utf8mb4
