--- a/app/_config/mimevalidator.yml
+++ b/app/_config/mimevalidator.yml
@@ -1,5 +1,5 @@
 ---
-Name: app_mimeuploadvalidator
+Name: app-mimeuploadvalidator
 After: '#mimeuploadvalidator'
 Only:
   moduleexists: 'silverstripe/mimevalidator'
