--- a/composer.json
+++ b/composer.json
@@ -9,21 +9,23 @@
     ],
     "require": {
         "php": "^8.3",
-        "silverstripe/login-forms": "^5.2",
-        "silverstripe/recipe-cms": "^5.2"
+        "silverstripe/login-forms": "^5.3",
+        "silverstripe/recipe-cms": "^5.3"
     },
     "require-dev": {
-        "cambis/silverstripe-rector": "^0.5",
-        "ergebnis/composer-normalize": "^2.42",
+        "cambis/silverstan": "^0.5",
+        "cambis/silverstripe-rector": "^0.7",
+        "ergebnis/composer-normalize": "^2.44",
         "php-parallel-lint/php-parallel-lint": "^1.4",
-        "phpstan/extension-installer": "^1.3",
-        "phpstan/phpstan": "^1.10",
-        "phpstan/phpstan-phpunit": "^1.3",
-        "phpstan/phpstan-strict-rules": "^1.5",
-        "phpunit/phpunit": "^9.5",
-        "rector/rector": "^1.0",
-        "slevomat/coding-standard": "^8.14",
-        "symplify/easy-coding-standard": "^12.0"
+        "phpstan/extension-installer": "^1.4",
+        "phpstan/phpstan": "^1.12",
+        "phpstan/phpstan-deprecation-rules": "^1.2",
+        "phpstan/phpstan-phpunit": "^1.4",
+        "phpstan/phpstan-strict-rules": "^1.6",
+        "phpunit/phpunit": "^9.6",
+        "rector/rector": "^1.2",
+        "slevomat/coding-standard": "^8.15",
+        "symplify/easy-coding-standard": "^12.3"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
