--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@cambis/silverstripe-website",
+  "private": true,
   "version": "0.0.1",
   "author": "Cameron Bryers",
   "license": "MIT",
@@ -13,6 +14,7 @@
     "husky": "^9.1.4",
     "laravel-mix": "^6.0.49",
     "lint-staged": "^15.2.8",
+    "postcss": "^8.3.11",
     "tailwindcss": "^3.4.3"
   },
   "resolutions": {
@@ -22,9 +24,10 @@
     "dev": "npx mix",
     "watch": "npx mix watch",
     "prod": "npx mix --production",
-    "prepare": "husky"
+    "postinstall": "husky install"
   },
   "dependencies": {
     "@changesets/cli": "^2.27.7"
-  }
+  },
+  "packageManager": "yarn@4.5.3"
 }
